DOM render function?

--- a/products/index.html
+++ b/products/index.html
@@ -13,27 +13,8 @@
 <body>
     <main>
         <h1>This is where you buy plants</h1>
-        <ul>
-            <li>ID</li>
-            <li>Name</li>
-            <li>
-                <image src="http://placekitten.com/200/200"></image>
-            </li>
-            <li>Deription</li>
-            <li>Category</li>
-            <li>Price</li>
-            <button value="sword-fern">Add to Cart</button>
-        </ul>
-        <ul>
-            <li>ID</li>
-            <li>Name</li>
-            <li>
-                <image src="http://placekitten.com/200/200"></image>
-            </li>
-            <li>Deription</li>
-            <li>Category</li>
-            <li>Price</li>
-            <button value="sword-fern">Add to Cart</button>
+        <ul id="fern-list">
+
         </ul>
     </main>
 </body>
