javascript works.  CSS is terrible.

--- a/products/index.html
+++ b/products/index.html
@@ -13,9 +13,11 @@
 <body>
     <main>
         <h1>This is where you buy plants</h1>
-        <ul id="fern-list">
+        <ul class="fern-list">
 
         </ul>
+
+        <script type="module" src="/products/products.js"></script>
     </main>
 </body>
 
