--- a/products/index.html
+++ b/products/index.html
@@ -17,7 +17,7 @@
 
         </ul>
 
-        <script type="module" src="/products/products.js"></script>
+        <script type="module" src="./products/products.js"></script>
     </main>
 </body>
 
