changed formatting (css) and spelling error in utils.js

--- a/products/index.html
+++ b/products/index.html
@@ -12,12 +12,15 @@
 
 <body>
     <main>
-        <h1>This is where you buy plants</h1>
+        <header>
+            <h1>This is where you buy plants</h1>
+        </header>
+
         <ul class="fern-list">
 
         </ul>
 
-        <script type="module" src="/products/products.js"></script>
+        <script type="module" src="products.js"></script>
     </main>
 </body>
 
