add script tag to html because was silly and forgot it

--- a/basket/index.html
+++ b/basket/index.html
@@ -22,22 +22,12 @@
                     <th>Quantity</th>
                     <th>Price</th>
                 </tr>
-            </thead>
-            <tbody>
-
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td>Total: </td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tfoot>
         </table>
 
         <button>Place Order</button>
     </main>
 
+    <script type="module" src="./basket.js"></script>
 </body>
 
 </html>
