--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <a href="products/index.html">
             <h2>Products</h2>
         </a>
+        <a href="basket/index.html">
+            <h2>Basket</h2>
+        </a>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
