troubleshoot merge with main

--- a/basket/index.html
+++ b/basket/index.html
@@ -24,7 +24,7 @@
                 </tr>
         </table>
 
-        <button>Place Order</button>
+        <button disable=false>Place Order</button>
     </main>
 
     <script type="module" src="./basket.js"></script>
